--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BusinessCard</string>
+    <string name="label_business_cards">Business Card</string>
 </resources>
