--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="label_company">Company</string>
     <string name="label_color">Color</string>
     <string name="label_confirm">Confirm</string>
+    <string name="label_show_success">Card created with success.</string>
 </resources>
